--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <p>test123 </p>
+    <form method="POST" action="https://simple-form.com/youremail@domain.com">
+        <input type="text" name="name" placeholder="Your name" />
+        <input type="email" name="replyTo" placeholder="Your email" />
+        <textarea name="message" placeholder="Your message"></textarea>
+        <input type="submit" value="Send" />
+    </form>
 </body>
 </html>
