--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form method="POST" action="https://simple-form.com/chen.andrew772@gmail.com">
+    <form method="POST" action="https://simple-form.com/your@email.com">
         <input type="text" name="name" placeholder="Your name" />
         <input type="email" name="replyTo" placeholder="Your email" />
         <textarea name="message" placeholder="Your message"></textarea>
